Fixed nav line alignments.

--- a/static/css/objects.css
+++ b/static/css/objects.css
@@ -183,6 +183,7 @@ a.button.small-button { font-size: 0.8rem; padding: 0.35em 1.1em; }
     padding: 0 0.2em;
     display: inline-block;
     font-size: 1.1em;
+    vertical-align: bottom;
 }
 .main-nav .nav-line .sub-group { display: block; }
 .main-nav .nav-line .nav-line-spacer.amp {
@@ -190,8 +191,8 @@ a.button.small-button { font-size: 0.8rem; padding: 0.35em 1.1em; }
     font-size: 1.5em;
     line-height: 1;
     position: relative;
-    top: 0.1em;
     color: rgba(0,0,0,0.5);
+    vertical-align: middle;
 }
 .main-nav .nav-line a,
 .main-nav .nav-line a:visited {
@@ -234,7 +235,6 @@ a.button.small-button { font-size: 0.8rem; padding: 0.35em 1.1em; }
         color: rgba(200,00,00,0.65);
         margin: 1.5rem 0; 
     }
-    .main-nav .nav-line .nav-line-spacer { padding: 0 0.1em; }
     .main-nav .nav-line .nav-line-spacer.amp { color: rgba(200,00,00,0.5); }
     .main-nav .nav-line .sub-group { display: inline-block; }
     .main-nav .nav-line a,
@@ -258,7 +258,7 @@ a.button.small-button { font-size: 0.8rem; padding: 0.35em 1.1em; }
     .wf-active .main-nav .nav-line .bangalore a,
     .wf-active .main-nav .nav-line .bangalore a:visited { font-family: proxima-nova, Proxima Nova, Avenir, Helvetica Neue, Helvetica, sans-serif; }
     .main-nav .nav-line .nav-line-spacer {
-        padding: 0;
+        padding: .15em 0;
         width: 1.5rem;
         text-indent: -999em;
         overflow: hidden;
@@ -267,10 +267,9 @@ a.button.small-button { font-size: 0.8rem; padding: 0.35em 1.1em; }
 }
 @media only screen and (min-width: 50em) {
     .main-nav .nav-line { margin: 2rem 0; }
-    .main-nav .nav-line .nav-line-spacer { width: 4rem; text-indent: 0; }
+    .main-nav .nav-line .nav-line-spacer { width: 4rem; text-indent: 0; overflow: visible; }
     .main-nav .nav-line .nav-line-spacer.amp {
         width: 1.5rem;
-        top: 0.15em;
         line-height: 1.5rem;
         font-weight: 300;
     }
